--- a/style.css
+++ b/style.css
@@ -36,3 +36,13 @@ p {
     font-weight: 200;
     font-family: 'Zalando Sans', sans-serif;
 }
+
+.link {
+    color: #032340;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
+    color: #6CBAD9;
+}
