--- a/style.css
+++ b/style.css
@@ -1,48 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 
-body{
-    background-image: linear-gradient(90deg, #86421b, #BF7C41);
-    background-attachment: fixed;
+:root {
+    --cor0: #5971a88a;
+    --cor1: #5080f0;
+    --cor2: #565F75;
+    --cor3: #3A3C42;
+    --cor4: #222733;
+
+    --fonte-destaque: 'Space Grotesk';
+    --fonte-padrao: 'Roboto Condensed';
 }
 
-h1 {
-    font: bold 3em 'DM Serif Text', serif;
-    color: #032340;
+* {
+    margin: 0px;
+}
+
+body {
+    background-color: var(--cor0);
+}
+
+header {
+    background-image: linear-gradient(180deg, var(--cor1), var(--cor2));
+    min-height: 100px;
+    padding-bottom: 5px;
+    color: white;
     text-align: center;
-    text-shadow: 1px 1px #52281097;
 }
 
-h2 {
-   font: 700 2em 'DM Serif Text', serif;
-   color: #6CBAD9;
-   text-shadow: 2px 2px #52281097;
+header > h1 {
+    font-family: var(--fonte-destaque);
+    font-size: 2.5em;
+    padding: 50px;
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.414);
 }
 
-p {
-    font-family: 'Zalando Sans', sans-serif;
+header > nav {
+    font-family: var(--fonte-padrao);
+    text-align: center;
+    padding: 5px 10px 5px 10px;
 }
 
-.texto {
-    background-color: white;
-    box-shadow: 0px 0px 50px #3d2815;
-    width: 350px;
-    padding: 10px;
-    margin: auto;
-    border-radius: 20px;
-    text-indent: 30px;
-    text-align: justify;
-    font-weight: 200;
-    font-family: 'Zalando Sans', sans-serif;
-}
-
-.link {
-    color: #032340;
+header a {
+    transition: 0.3s;
+    color: white;
     text-decoration: none;
     font-weight: bold;
+    padding: 10px 25px 10px 25px;
+    border-radius: 10px;
 }
 
-a:hover {
-    color: #6CBAD9;
+header a:hover {
+    background-color: var(--cor4);
+    color: var(--cor2);
 }
