--- a/style.css
+++ b/style.css
@@ -36,13 +36,16 @@ header > h1 {
     text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.414);
 }
 
-header > nav {
+nav {
+    color: white;
+    background-color: var(--cor3);
     font-family: var(--fonte-padrao);
-    text-align: center;
-    padding: 5px 10px 5px 10px;
+    text-align: left;
+    padding: 10px 10px 10px 10px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.39);
 }
 
-header a {
+nav a {
     transition: 0.3s;
     color: white;
     text-decoration: none;
@@ -51,7 +54,68 @@ header a {
     border-radius: 10px;
 }
 
-header a:hover {
+nav a:hover {
+    background-color: var(--cor1);
+    color: var(--cor4);
+}
+
+main {
+    background-color: white;
+    max-width: 800px;
+    padding-bottom: 5px;
+    margin: 20px auto 10px auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.386);
+    border-radius: 20px 20px 20px 20px;
+}
+
+main h1 {
+    background-image: linear-gradient(90deg, var(--cor4), var(--cor1));
+    color: white;
+    font-family: var(--fonte-destaque);
+    font-size: 1.5em;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+main h1.primeiro {
+    border-radius: 20px 20px 0px 0px;
+}
+
+main p {
+    font-family: sans-serif;
+    text-indent: 30px;
+    margin: 10px;
+}
+
+aside p {
+    font-family: sans-serif;
+    padding: 5px;
+}
+aside a {
+    background-color: var(--cor1);
+    padding: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: var(--fonte-destaque);
+    color: black;
+    border-radius: 10px;
+}
+
+aside a:hover {
     background-color: var(--cor4);
-    color: var(--cor2);
+    color: white;
+    transition: 0.3s;
+}
+
+aside img {
+    margin-right: 10px;
+}
+
+footer {
+    font-family: var(--fonte-padrao);
+    background-color: var(--cor4);
+    color: white;
+    text-align: center;
+    padding: 5px;
+    margin-top: 20px;
 }
