--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ main h1.primeiro {
 }
 
 main p {
+    line-height: 25px;
     font-family: sans-serif;
     text-indent: 30px;
     margin: 10px;
@@ -90,7 +91,9 @@ main p {
 aside p {
     font-family: sans-serif;
     padding: 5px;
+    line-height: 25px;
 }
+
 aside a {
     background-color: var(--cor1);
     padding: 5px;
